# xraytracer

./: Cargo.toml
src/: args.rs  camera.rs  intersect.rs  main.rs  material.rs  output.rs  radiance.rs  rays.rs  render.rs  time.rs  triangle.rs
